// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoGridHeader renders with empty prop 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  />
</div>
`;

exports[`VideoGridHeader renders with title 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  >
    Autos & Vehicles
  </span>
</div>
`;

exports[`VideoGridHeader renders without prop 1`] = `
<div
  className="video-grid-header"
>
  <span
    className="title"
  />
</div>
`;
